--- a/src/main/webapp/logged.html
+++ b/src/main/webapp/logged.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/tester.css">
     <title>Tester</title>
 </head>
-<body>
-    
+
+<body class="body-logged">
+    <nav class="barra-lateral">
+        <section class="navbar-sup">
+            <i class="fa-solid fa-user"></i>
+            <p id="nombre-usuario">Pepito Pérez</p>
+        </section>
+        <section class="navbar-mid">
+            <div class="elemento-nav" id="logged-home">
+                <i class="fa-solid fa-house"></i>
+                <p>Inicio</p>
+            </div>
+            <div class="elemento-nav" id="logged-nuevo-test">
+                <i class="fa-solid fa-plus"></i>
+                <p>Crear Test</p>
+            </div>
+            <div class="elemento-nav" id="logged-realizar-test">
+                <i class="fa-solid fa-user-plus"></i>
+                <p>Realizar Test</p>
+            </div>
+            <div class="elemento-nav" id="logged-resultados">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <p>Resultados</p>
+            </div>
+        </section>
+        <section class="navbar-inf">
+            <div class="elemento-nav">
+                <i class="fa-solid fa-right-from-bracket fa-rotate-180"></i>
+                <p>Cerrar Sesión</p>
+            </div>
+        </section>
+    </nav>
+    <main id="contenido-tests">
+        <!--Crear Nuevo Test-->
+        <section class="contenido-main">
+            <h2>Nuevo Test</h2>
+            <form action="" method="POST" class="form-logged">
+                <div class="form-nuevo-test-sup">
+                    <label for="nombre-test">Nombre Test:</label>
+                    <input type="text" name="nombre-test" id="nombre-test" placeholder="Nombre del Test">
+                    <label for="creador">Creador</label>
+                    <input type="text" name="creador" id="creador" placeholder="Nombre del Creador" disabled>
+                </div>
+            </form>
+        </section>
+    </main>
+    <script src="./scripts/font-awesome.min.js"></script>
+    <script src="./scripts/logged/new-test.js"></script>
 </body>
+
 </html>
