--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Way</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+    <link rel="stylesheet" href="./styles/tester.css">
 </head>
+
 <body>
-$END$
+    <div class="container">
+        <header id="header">
+            <nav class="navbar-custom">
+                <div class="container">
+                    <a class="navbar-brand" href="index.html">The Way</a>
+                </div>
+            </nav>
+            <a class="btn-inicio-sesion" href="login.jsp">
+                <i class="fa-solid fa-person"></i>
+                <span>Iniciar Sesión</span>
+            </a>
+        </header>
+    </div>
+    <div class="container">
+        <main class="main-login">
+            <section class="seccion-main">
+                <p>Bienvenido a <span class="navbar-brand">The Way</span>, la herramienta en línea para encontrar tu
+                    camino hacia la carrera perfecta.</p>
+            </section>
+            <section class="seccion-main iconos-profesiones">
+                <i class="fa-solid fa-user icono-profesion"></i>
+                <i class="fa-solid fa-user-doctor icono-profesion"></i>
+                <i class="fa-solid fa-user-secret icono-profesion"></i>
+                <i class="fa-solid fa-user-astronaut icono-profesion"></i>
+                <i class="fa-solid fa-camera icono-profesion"></i>
+                <i class="fa-solid fa-user-tie icono-profesion"></i>
+                <i class="fa-solid fa-chalkboard-user icono-profesion"></i>
+                <i class="fa-solid fa-user-nurse icono-profesion"></i>
+                <i class="fa-solid fa-user-check icono-profesion"></i>
+            </section>
+        </main>
+    </div>
+
+    <script src="./scripts/jquery.min.js"></script>
+    <script src="./scripts/font-awesome.min.js"></script>
+    <script src="./scripts/cambiador-color.js"></script>
 </body>
+
 </html>
