crear-nuevo-test

--- a/src/main/webapp/logged.html
+++ b/src/main/webapp/logged.html
@@ -13,7 +13,7 @@
     <nav class="barra-lateral">
         <section class="navbar-sup">
             <i class="fa-solid fa-user"></i>
-            <p id="nombre-usuario">Pepito Pérez</p>
+            <p class="nombre-usuario">Pepito Pérez</p>
         </section>
         <section class="navbar-mid">
             <div class="elemento-nav" id="logged-home">
@@ -41,18 +41,7 @@
         </section>
     </nav>
     <main id="contenido-tests">
-        <!--Crear Nuevo Test-->
-        <section class="contenido-main">
-            <h2>Nuevo Test</h2>
-            <form action="" method="POST" class="form-logged">
-                <div class="form-nuevo-test-sup">
-                    <label for="nombre-test">Nombre Test:</label>
-                    <input type="text" name="nombre-test" id="nombre-test" placeholder="Nombre del Test">
-                    <label for="creador">Creador</label>
-                    <input type="text" name="creador" id="creador" placeholder="Nombre del Creador" disabled>
-                </div>
-            </form>
-        </section>
+        
     </main>
     <script src="./scripts/font-awesome.min.js"></script>
     <script src="./scripts/logged/new-test.js"></script>
