crear-eliminar-tarjeta

--- a/src/main/webapp/logged_crear_test.html
+++ b/src/main/webapp/logged_crear_test.html
@@ -50,24 +50,17 @@
                             </select>    
                         </div>
                     </div>
-                    <label for="descripcion-test">Descripción</label>
-                    <textarea name="descripcion-test" id="descripcion-test" cols="30" rows="10" placeholder="Descripción del test"></textarea>
+                    <div class="contenedor-textarea">
+                        <label for="descripcion-test">Descripción</label>
+                        <textarea name="descripcion-test" id="descripcion-test" cols="30" rows="10" placeholder="Descripción del test"></textarea>
+                    </div>
+                    
                     <!--Aquí irá una zona donde se generarán los inputs para crear los posibles resultados automáticamente al clicar en un botón-->
 
                     <div class="cabecera-posibles-resultados">
                         <p>Posibles resultados:</p>
                     </div>
                     <div id="zona-resultados">
-                        <div class="tarjeta-resultado" id="tarjeta-resultado-0">
-                            <div class="cabecera-nombre-resultado" >
-                                <label for="nombre-resultado-0">Nombre:</label>
-                                <input type="text" name="nombre-resultado-0" id="nombre-resultado-0" placeholder="Nombre del resultado" class="nombre-resultado">
-                            </div>
-                            <div class="descripcion-resultado">
-                                <label for="descripcion-resultado-0">Descripción:</label>
-                                <textarea name="descripcion-resultado-0" id="descripcion-resultado-0" placeholder="Descripción del resultado"></textarea>
-                            </div>
-                        </div>
                         <div id="boton-añadir-posible-resultado">
                             <i class="fa-solid fa-plus"></i>
                         </div>
