funcionando-añadir-pregunta-respuesta

--- a/src/main/webapp/logged_crear_test.html
+++ b/src/main/webapp/logged_crear_test.html
@@ -35,7 +35,7 @@
         <div class="contenido-main">
             <article>
                 <form action="" method="POST">
-                    <div id="primera-parte" class="non-visible">
+                    <div id="primera-parte" class="visible">
                         <div class="contenedor-contenedor-inputs">
                             <div class="contenedor-inputs">
                                 <label for="nombre-test">Nombre:</label>
